--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <label for="toggle-opciones" class="boton">DESCUBRIR MÁS</label>
 
             <div class="opciones-extra">
-                <a href="GALERIA/galeria.html">Galería</a>
+                <a href="Galeria/galeria.html">Galería</a>
                 <a href="horarios hotel/horarios.html">Horarios</a>
                 <a href="menu de comida/menu.html">Menú</a>
                 <a href="habitaciones/habitaciones.html">Habitaciones</a>
